[INT-527] Add endpoints to fetch reposter's ids for track and playlist (#1058)
* [INT-527] Add endpoints to fetch reposter's ids for track and playlist

* updated the implementation to return users metadata

* lint

* moved endpoints, added explicit linked_partitioning

* typo

* undo package-lock

* updated tests
